test/log/reduction/vrssum_v_i32_m.txt
vrssum_v_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrssum_v_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrssum_v_i32_m.c:30:6: warning: no previous prototype for 'vrssum_v_i32_m_golden' [-Wmissing-prototypes]
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vrssum_v_i32_m.c: In function 'vrssum_v_i32_m_golden':
vrssum_v_i32_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrssum_v_i32_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrssum_v_i32_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrssum_v_i32_m.c: In function 'main':
vrssum_v_i32_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool16_t mask;
      |              ^~~~
vrssum_v_i32_m.c:30:38: note: shadowed declaration is here
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                            ~~~~~~~~~~^~~~
vrssum_v_i32_m.c:38:16: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     int32x16_t maskoff;
      |                ^~~~~~~
vrssum_v_i32_m.c:30:52: note: shadowed declaration is here
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                           ~~~~~~~~~^~~~~~~
vrssum_v_i32_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     int32x16_t a;
      |                ^
vrssum_v_i32_m.c:30:69: note: shadowed declaration is here
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                            ~~~~~~~~~^
vrssum_v_i32_m.c:45:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vrssum_v_i32_m.c:30:80: note: shadowed declaration is here
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                                       ~~~~~~~~~^~~~~~~~~~
vrssum_v_i32_m.c:47:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   47 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrssum_v_i32_m.c:55:29: error: incompatible type for argument 1 of 'vrssum_v_i32_m'
   55 |     result = vrssum_v_i32_m(mask,maskoff,a);
      |                             ^~~~
      |                             |
      |                             bool16_t
In file included from vrssum_v_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2752:1: note: expected 'bool16x2_t' but argument is of type 'bool16_t'
 2752 | __RUGRATS_REDUC_V_OP (rssum, i, int, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~
vrssum_v_i32_m.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vrssum_v_i32_m.c: In function 'vrssum_v_i32_m_golden':
vrssum_v_i32_m.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrssum_v_i32_m.c:30:38: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                            ~~~~~~~~~~^~~~
vrssum_v_i32_m.c:30:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                           ~~~~~~~~~^~~~~~~
vrssum_v_i32_m.c:30:69: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                            ~~~~~~~~~^
vrssum_v_i32_m.c:30:80: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrssum_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                                       ~~~~~~~~~^~~~~~~~~~
At top level:
vrssum_v_i32_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrssum_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrssum_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed